--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -4,15 +4,11 @@ justify-content: center;
 align-items: center;
 }
 
-@mixin boton($color) {
-background-color: $color;
-color: white;
-padding: 8px 15px;
-border: none;
-border-radius: 5px;
-cursor: pointer;
-transition: 0.3s;
-&:hover {
-    background-color: darken($color, 10%);
-}
+@mixin boton($bg) {
+background: $bg;
+color: #fff;
+padding: 8px 12px;
+border-radius: 6px;
+transition: background .2s, transform .12s;
+&:hover { transform: translateY(-2px); background: darken($bg, 6%); }
 }
