--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,5 +11,5 @@ $colors: (facebook: #3b5998, instagram: #E4405F, linkedin: #0077B5);
 }
 $color-fondo: #f4f1ed;
 $color-texto: #2d2d2d;
-$color-acento: #e59d23;
+$color-acento: #d6921394;
 $font-base: 'Playfair Display', serif;
