--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,8 +1,7 @@
 footer {
-background: $color-texto;
-color: white;
+background: linear-gradient(90deg, $primary-color, $accent-color);
+color: $text-color;
 text-align: center;
 padding: 15px;
 font-size: 0.9rem;
-background: linear-gradient(90deg, #2d2d2d, $color-acento);
 }
