--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,21 +1,26 @@
 header {
-background-color: $color-texto;
-color: white;
+background-color: $primary-color;
+color: $text-color;
 padding: 10px;
 
 nav {
     ul {
-    @include center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     list-style: none;
     gap: 20px;
-    }
 
-    a {
-    color: white;
-    text-decoration: none;
-    transition: color 0.3s;
-    &:hover {
-        color: $color-acento;
+    li {
+        a {
+        color: $text-color;
+        text-decoration: none;
+        @include transition(color);
+
+        &:hover {
+            color: $accent-color;
+        }
+        }
     }
     }
 }
