--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,15 +1,12 @@
-$colors: (facebook: #3b5998, instagram: #E4405F, linkedin: #0077B5);
+$primary-color: #2d2d2d;
+$secondary-color: #e4405f;
+$text-color: white;
+$accent-color: rgba(214, 146, 19, 0.58);
+$font-main: 'Playfair Display', serif;
+$border-radius: 8px;
+$transition: all 0.3s ease;
 
-// Genero clases para íconos de redes
-@each $name, $color in $colors {
-.icon-#{$name} {
-    color: $color;
-    &:hover {
-    color: darken($color, 10%);
-    }
-}
-}
-$color-fondo: #f4f1ed;
-$color-texto: #2d2d2d;
-$color-acento: #d6921394;
-$font-base: 'Playfair Display', serif;
+// Breakpoints
+$mobile: 600px;
+$tablet: 768px;
+$desktop: 1024px;
