--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,8 +1,13 @@
 footer {
-background-color: $paper;
-color: $text;
+background-color: #2d2d2d;
+color: white;
 text-align: center;
-padding: 15px;
+padding: 15px 0;
 font-size: 0.9rem;
-border-top: 1px solid lighten($accent, 15%);
+border-top: 2px solid rgba(214, 146, 19, 0.58);
+
+img {
+    max-width: 150px;
+    margin-top: 10px;
+}
 }
