--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -27,4 +27,55 @@ nav a { color:$text; text-decoration:none; }
 }
 
 
-footer { text-align:center; padding:14px 10px; color:$muted; }
+footer { 
+    text-align:center; 
+    padding:14px 10px; 
+    color:$muted;
+}
+
+.galeria-container {
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+gap: 1.5rem;
+padding-left: 5%;
+
+img {
+    width: 70%;
+    max-width: 300px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    object-fit: cover;
+    transition: transform 0.3s ease;
+
+    &:hover {
+    transform: scale(1.03);
+    }
+}
+
+@media (max-width: 768px) {
+    align-items: center;
+    padding-left: 0;
+
+    img {
+    width: 90%;
+    max-width: 350px;
+    }
+}
+}
+
+@media (max-width: 720px) {
+header {
+    padding: 10px 20px;
+}
+
+nav ul {
+    width: 150px;
+    padding: 6px 10px;
+}
+
+nav li a {
+    font-size: 0.9rem;
+    padding: 5px 6px;
+}
+}
